crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_nested_unordered_list_node.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: node.clone()
---
Text {
    sections: [
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " • ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Import a HTML file and watch it magically convert to Markdown",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "    ",
            style: TextStyle {
                font: WeakHandle<Font>(Id(97059ac6-c9ba-4da9-95b6-bed82c3ce198, 0)),
                font_size: 12.0,
                color: Rgba {
                    red: 1.0,
                    green: 1.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " ◦ ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Drag and drop images (requires your Dropbox account be linked)",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " • ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Import and save files from GitHub, Dropbox, Google Drive and One Drive",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "    ",
            style: TextStyle {
                font: WeakHandle<Font>(Id(97059ac6-c9ba-4da9-95b6-bed82c3ce198, 0)),
                font_size: 12.0,
                color: Rgba {
                    red: 1.0,
                    green: 1.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " ◦ ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Drag and drop markdown and HTML files into Dillinger",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: " • ",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "Export documents as Markdown, HTML and PDF",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
    ],
    alignment: Left,
    linebreak_behaviour: WordBoundary,
}
