crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_ordered_list.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: "generate_markdown_lines(BevyMarkdown {\n        markdown_theme,\n        text: input.clone(),\n        attrs: AttrsOwned::new(Attrs::new()),\n    })"
---
Ok(
    BevyMarkdownLines {
        lines: [
            [],
            [
                (
                    " 1. ",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 1,
                    },
                ),
                (
                    "Import a HTML file and watch it magically convert to Markdown",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 2,
                    },
                ),
            ],
            [
                (
                    " 2. ",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 4,
                    },
                ),
                (
                    "Drag and drop images (requires your Dropbox account be linked)",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 5,
                    },
                ),
            ],
            [
                (
                    " 3. ",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 7,
                    },
                ),
                (
                    "Import and save files from GitHub, Dropbox, Google Drive and One Drive",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 8,
                    },
                ),
            ],
            [],
        ],
        span_metadata: [
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
        ],
    },
)
