crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_text_style.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: "generate_markdown_lines(BevyMarkdown {\n        markdown_theme,\n        text: input.clone(),\n        attrs: AttrsOwned::new(Attrs::new()),\n    })"
---
Ok(
    BevyMarkdownLines {
        lines: [
            [
                (
                    "bold1",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 0,
                    },
                ),
            ],
            [
                (
                    "bold2",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            700,
                        ),
                        metadata: 2,
                    },
                ),
            ],
            [
                (
                    "italic1",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Italic,
                        weight: Weight(
                            400,
                        ),
                        metadata: 4,
                    },
                ),
            ],
            [
                (
                    "italic2",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Italic,
                        weight: Weight(
                            400,
                        ),
                        metadata: 6,
                    },
                ),
            ],
            [
                (
                    "Hello world",
                    AttrsOwned {
                        color_opt: None,
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 7,
                    },
                ),
            ],
            [
                (
                    "link",
                    AttrsOwned {
                        color_opt: Some(
                            Color(
                                4278848010,
                            ),
                        ),
                        family_owned: SansSerif,
                        stretch: Normal,
                        style: Normal,
                        weight: Weight(
                            400,
                        ),
                        metadata: 8,
                    },
                ),
            ],
        ],
        span_metadata: [
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: None,
            },
            TextSpanMetadata {
                link: Some(
                    "https://example.com",
                ),
            },
        ],
    },
)
